@@ -5,6 +5,13 @@ iRedMail-0.9.0:
           Required by iRedAdmin-Pro self-service.
 
     * Fixed:
+        - Set 'receive_override_options=no_address_mappings' in Postfix to
+          disable address mappings before content filter (Amavisd, in our
+          case), and remove 'no_address_mappings' in Postfix master.cf defined
+          for transport '127.0.0.1:10025'.
+          Important note: you should comment out
+          'receive_override_options=no_address_mappings' in Postfix if you
+          don't have a content filter.
         - Not enable cron job to update SpamAssassin rules in file
           /etc/default/spamassassin (CRON=1).
         - Incorrect quota dict name in Dovecot quota warning script.
